[package]
name = "schwab-cgt-calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
chrono = "0.4.22"
clap = { version = "4.0.11", features = ["derive"] }
csv = "1.1.6"
reqwest = "0.11.12"
tokio = { version = "1.21.2", features = ["rt", "macros"] }
